Fixed nav issues

--- a/TheHourglassApp/Views/Home/Index.cshtml
+++ b/TheHourglassApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <a href="~/lib/bootstrap/dist/css/bootstrap.css.map">~/lib/bootstrap/dist/css/bootstrap.css.map</a>
+    <a href="~/lib/bootstrap/dist/css/bootstrap.css.map"></a>
     <title>The HourGlass | Find Happy Hours Easily</title>
 
     <!-- Latest compiled and minified CSS -->
@@ -28,6 +28,7 @@
 
 <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
 
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Intro Section -->
     <section class="home-section" style="background-image: url(http://www.outtherecreative.com/wp-content/uploads/2018/03/drinkingbuddies.jpg); background-position: 50% 0px; background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
