Added hover buttons, changed margins style

--- a/TheHourglassApp/Views/Home/Index.cshtml
+++ b/TheHourglassApp/Views/Home/Index.cshtml
@@ -62,14 +62,17 @@
     </section>
 
 
+    <!-- Hover Images -->
+    <div class='container pt-50 pb-40'>
+        <img src="http://www.outtherecreative.com/wp-content/uploads/2018/03/foodburg.jpg" onmouseover="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/Food_hover.jpg'" onmouseout="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/foodburg.jpg'" />
+        <img src="http://www.outtherecreative.com/wp-content/uploads/2018/03/drinks2.jpg" onmouseover="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/drinks_hover.jpg'" onmouseout="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/drinks2.jpg'" />
+
+    </div>
 
 
 
 
-
-
-
-
+    <!-- Contact -->
     <section id="contact" class="contact-section">
         <div class='container pt-50 pb-40'>
 
@@ -124,18 +127,14 @@
                 <article class="col-md-12 text-center">
                     <a class="page-scroll arrowww" href="#page-top">
                         <i class="fa fa-angle-up fa-4x"></i>
-                    </a>
 
-                    </a>
-                    </li>
+                        <div class="row">
+                            <article class="col-md-12 text-center pt-20">
+                                <blockquote style='border: none;'>
 
-                    <div class="row">
-                        <article class="col-md-12 text-center pt-20">
-                            <blockquote style='border: none;'>
-
-                                <footer>The HourGlass Copyright 2018. All Rights Reserved.</></footer>
-                        </article>
-                    </div>
+                                    <footer>The HourGlass Copyright 2018. All Rights Reserved.</></footer>
+                            </article>
+                        </div>
             </div>
     </footer>
 
@@ -154,3 +153,4 @@
 </body>
 
 </html>
+
