Adding about section

--- a/TheHourglassApp/Views/Home/Index.cshtml
+++ b/TheHourglassApp/Views/Home/Index.cshtml
@@ -62,6 +62,41 @@
     </section>
 
 
+    <!-- About Section -->
+    <section id="portfolio" class="portfolio-section">
+        <div class="container-fluid title">
+            <h3 class='black'><span>ABOUT</span></h3>
+            <div class="horizontal-gold"></div><br /><br /><br />
+
+
+            <div class="col-xs-12 about-text">
+                <span>1</span><p>Search by location: here - there - anywhere</p><span>2</span><p>Search by Category: food - drinks - anything that doesn't stink</p><br />
+                <span>3</span><p>never miss a happy hour: happy hour = happy you</p>
+                <span>4</span><p>LET'S WORK TOGETHER TO KEEP UP TO DATE</p><br /><br /><br />
+            </div>
+
+
+            <h3 class='black'><span>SORT BY</span></h3>
+            <div class="horizontal-gold"></div><br /><br /><br />
+
+            <div class="controls">
+
+                <ul class="list-inline portfolio-nav">
+
+
+                    <li><div class="filter" data-filter=".category-1">Food</div></li>
+                    <li><i class="fa fa-times"></i></li>
+                    <li><div class="filter" data-filter=".category-2">Drinks</div></li>
+
+
+                </ul>
+            </div>
+        </div>
+
+    </section>
+
+
+
     <!-- Hover Images -->
     <div class='container pt-50 pb-40'>
         <img src="http://www.outtherecreative.com/wp-content/uploads/2018/03/foodburg.jpg" onmouseover="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/Food_hover.jpg'" onmouseout="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/foodburg.jpg'" />
