--- a/TheHourglassApp/wwwroot/css/site.css
+++ b/TheHourglassApp/wwwroot/css/site.css
@@ -361,3 +361,22 @@ html {
     transform: translate(-50%, -50%);
 }
 
+.portfolio-section {
+    text-align: left;
+    background: #f0f0f0;
+}
+
+.container-fluid {
+    float: center;
+}
+
+.about-text span {
+    font-weight: 600;
+    margin: 0 auto;
+    padding: 2px 10px;
+    font-size: 24px;
+    border-bottom: 4px solid #B6944C;
+    color: #fff;
+    box-sizing: border-box;
+    vertical-align: middle;
+}
