Fixed Some Alignment Issues

--- a/TheHourglassApp/Views/Home/Index.cshtml
+++ b/TheHourglassApp/Views/Home/Index.cshtml
@@ -65,8 +65,11 @@
     <!-- About Section -->
     <section id="portfolio" class="portfolio-section">
         <div class="container-fluid title">
-            <h3 class='black'><span>ABOUT</span></h3>
-            <div class="horizontal-gold"></div><br /><br /><br />
+            <center>
+                <br />
+                <h3 class='white'><span>ABOUT</span></h3>
+                <div class="horizontal-gold"></div><br /><br /><br />
+            </center>
 
 
             <div class="col-xs-12 about-text">
@@ -75,22 +78,27 @@
                 <span>4</span><p>LET'S WORK TOGETHER TO KEEP UP TO DATE</p><br /><br /><br />
             </div>
 
-
-            <h3 class='black'><span>SORT BY</span></h3>
-            <div class="horizontal-gold"></div><br /><br /><br />
-
-            <div class="controls">
-
-                <ul class="list-inline portfolio-nav">
-
-
-                    <li><div class="filter" data-filter=".category-1">Food</div></li>
-                    <li><i class="fa fa-times"></i></li>
-                    <li><div class="filter" data-filter=".category-2">Drinks</div></li>
+        </div>
+        </div>
+        <div class="container-fluid title">
+            <center>
+                <h3 class='white'><span>SORT BY</span></h3>
+                <div class="horizontal-gold"></div><br /><br /><br />
 
 
-                </ul>
-            </div>
+                <br />
+                <h3 class='white'>
+                    Food
+                    <i class="fa fa-times"></i>
+                    
+                        Drinks
+                    </h3>
+</div>
+        </center>
+        <br /><br />
+
+        </ul>
+        </div>
         </div>
 
     </section>
@@ -103,7 +111,7 @@
         <img src="http://www.outtherecreative.com/wp-content/uploads/2018/03/drinks2.jpg" onmouseover="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/drinks_hover.jpg'" onmouseout="this.src='http://www.outtherecreative.com/wp-content/uploads/2018/03/drinks2.jpg'" />
 
     </div>
-
+    <br />
 
 
 
@@ -167,7 +175,7 @@
                             <article class="col-md-12 text-center pt-20">
                                 <blockquote style='border: none;'>
 
-                                    <footer>The HourGlass Copyright 2018. All Rights Reserved.</></footer>
+                                    <footer>The HourGlass &copy; 2018. All Rights Reserved.</></footer>
                             </article>
                         </div>
             </div>
