--- a/TheHourglassApp/Views/Home/Index.cshtml
+++ b/TheHourglassApp/Views/Home/Index.cshtml
@@ -50,10 +50,13 @@
 
             </div>
         </div>
+
+
+
         <!-- Search Bar -->
         <div class="wrap">
             <div class="search">
-                <input type="text" class="searchTerm" placeholder="Find Your Happy Hour!">
+                <input type="text" id="searchInput" class="searchTerm" placeholder="Find Your Happy Hour!">
                 <button type="submit" class="searchButton">
                     <i class="fa fa-search"></i>
                 </button>
@@ -61,7 +64,20 @@
         </div>
     </section>
 
+    <script>
+        var countries = [
+            { value: 'Andorra', data: 'AD' },
+            // ...
+            { value: 'Zimbabwe', data: 'ZZ' }
+        ];
 
+        $('#autocomplete').autocomplete({
+            lookup: countries, 
+            onSelect: function (suggestion) {
+                alert('You selected: ' + suggestion.value + ', ' + suggestion.data);
+            }
+        });
+    </script>
 
 
 
